k8s-templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metrics-app-deployment
  namespace: dev
  labels:
    app: metrics-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: metrics-app
  template:
    metadata:
      labels:
        app: metrics-app
    spec:
      containers:
        - name: metrics-app
          image: profemzy/prometrics
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              port: 8080
              path: /prometheus
          readinessProbe:
            httpGet:
              port: 8080
              path: /prometheus
            periodSeconds: 10
            initialDelaySeconds: 20
