k8s-templates/rs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
    type: frontend
spec:
  template:
    metadata:
      name: nginx-pod
      labels:
        app: nginx
        type: frontend
    spec:
      containers:
        - name: nginx-container
          image: nginx
  replicas: 3
  selector:
    matchLabels:
      app: nginx
