k8s-templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name:  mysql
  namespace: dev
  labels:
    app: mysql
spec:
  serviceName: mysql-h
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql
          ports:
            - name: tcp
              protocol: TCP
              containerPort: 3306
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: data-volume
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: data-claim
