k8s-templates/headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-h
  namespace: dev
spec:
  ports:
    - port: 3306
  selector:
    app: mysql
  clusterIP: None
