k8s-templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metrics-app-service
  namespace: dev
spec:
  type: NodePort

  selector:
    app: metrics-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
