k8s-templates/spring-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-app-service
  namespace: dev
spec:
  type: LoadBalancer
  selector:
    app: spring-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
